<resources>
    <string name="app_name">MovieBook</string>

    <string name="search_result_found_one">Found 1 movie</string>
    <string name="search_result_found_plural" formatted="false">Found %d movies</string>
    <string name="not_found">Not found</string>
    <string name="retry">Retry</string>
    <string name="disable_network">Network is not ready. Try again.</string>

    <string name="details_title">%s, %s. released %s</string>
    <string name="crew">Crew</string>
    <string name="director">Director</string>
    <string name="Writer">Writer</string>
    <string name="Actors">Actors</string>
    <string name="reception">Reception</string>
    <string name="plot">Plot</string>
</resources>
