<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />
        <import type="java.lang.String" />

        <variable
            name="plotVisible"
            type="boolean"/>

        <variable
            name="progressBar"
            type="boolean" />

        <variable
            name="view"
            type="com.powercode.test.max.moviebook.ui.activities.details.fragment.view.DetailsFragmentView"/>

        <variable
            name="movie"
            type="com.powercode.test.max.moviebook.model.entity.DetailsMovieModel" />
    </data>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/background_light"
        android:fitsSystemWindows="true">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/collapsing"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:contentScrim="?attr/colorPrimary"
                app:expandedTitleMarginEnd="64dp"
                app:expandedTitleMarginStart="48dp"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <ImageView
                    android:id="@+id/backdrop"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fitsSystemWindows="true"
                    android:scaleType="centerCrop"
                    android:src="@android:drawable/ic_menu_report_image"
                    app:bindImage="@{movie.Poster}"
                    app:layout_collapseMode="parallax" />

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                    app:title="@{movie.Title}" />
            </android.support.design.widget.CollapsingToolbarLayout>
        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp">


                <TextView
                    android:id="@+id/details_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:text="@{String.format(@string/details_title, movie.Production, movie.Country, movie.Released)}"
                    android:textColor="@android:color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/url"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:autoLink="web"
                    android:text="@{movie.Website}"
                    android:textColor="@android:color/holo_blue_dark"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/details_title" />


                <android.support.constraint.ConstraintLayout
                    android:id="@+id/plot_layout"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/url">


                    <ImageButton
                        android:id="@+id/imageButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:background="@android:color/transparent"
                        android:src="@{plotVisible ? @android:drawable/arrow_up_float : @android:drawable/arrow_down_float}"
                        app:layout_constraintBottom_toBottomOf="@+id/plot_text"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/plot_text"
                        app:onClick="@{view::clickPlot}"/>

                    <TextView
                        android:id="@+id/plot_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/plot"
                        android:textColor="@android:color/black"
                        app:layout_constraintStart_toEndOf="@+id/imageButton"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/plot"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:text="@{movie.Plot}"
                        android:textColor="@android:color/black"
                        android:visibility="@{plotVisible ? View.VISIBLE : View.GONE}"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/plot_text" />
                </android.support.constraint.ConstraintLayout>


                <TextView
                    android:id="@+id/crew"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/crew"
                    android:textColor="@android:color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/plot_layout" />

                <LinearLayout
                    android:id="@+id/crew_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:background="#e5e5e5"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/crew">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="1dp"
                        android:orientation="horizontal">
                        <TextView
                            android:id="@+id/director"
                            android:layout_width="80dp"
                            android:layout_height="match_parent"
                            android:layout_marginRight="1dp"
                            style="@style/GridStyle"
                            android:text="@string/director"/>

                        <TextView
                            android:id="@+id/director_name"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            style="@style/GridStyle"
                            android:text="@{movie.Director}"
                            />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="1dp"
                        android:orientation="horizontal">
                        <TextView
                            android:id="@+id/writer"
                            android:layout_width="80dp"
                            android:layout_height="match_parent"
                            android:layout_marginRight="1dp"
                            style="@style/GridStyle"
                            android:text="@string/Writer"/>

                        <TextView
                            android:id="@+id/writer_names"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            style="@style/GridStyle"
                            android:text="@{movie.Writer}"
                            />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="1dp"
                        android:orientation="horizontal">
                        <TextView
                            android:id="@+id/actors"
                            android:layout_width="80dp"
                            android:layout_height="match_parent"
                            android:layout_marginRight="1dp"
                            style="@style/GridStyle"
                            android:text="@string/Actors"/>

                        <TextView
                            android:id="@+id/actors_names"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            style="@style/GridStyle"
                            android:text="@{movie.Actors}"
                            />
                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:id="@+id/reception"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="24dp"
                    android:textColor="@android:color/black"
                    android:text="@string/reception"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/crew_layout" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recycler"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="24dp"
                    android:textColor="@android:color/black"
                    android:text="@string/reception"
                    app:layoutManager="android.support.v7.widget.LinearLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/reception"
                    />

            </android.support.constraint.ConstraintLayout>
        </android.support.v4.widget.NestedScrollView>

        <ProgressBar
            android:id="@+id/progressBar"
            style="@style/Base.Widget.AppCompat.ProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="@{progressBar ? View.VISIBLE : View.GONE}"
            app:layout_anchor="@+id/appbar"
            app:layout_anchorGravity="bottom|center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.design.widget.CoordinatorLayout>
</layout>